Bug 402270 - Transform Tool shortcut ambiguous in 4.1.7, conflict with SVG Text Tool shortcut
Summary: Transform Tool shortcut ambiguous in 4.1.7, conflict with SVG Text Tool shortcut
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: 4.1.7
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-18 01:32 UTC by Tiar
Modified: 2018-12-18 07:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2018-12-18 01:32:59 UTC
SUMMARY
There is a (probably new) default shortcut ctrl+T for SVG Text Tool, unfortunately that means that Transform Tool (default shortcut: also ctrl+T) is not working anymore when called out from the shortcut. 


STEPS TO REPRODUCE
1. Click ctrl+T on (probably*) paint layer.

OBSERVED RESULT
Error message that shortcut is ambiguous.

EXPECTED RESULT
Transform Tool working as expected.

Reference: https://www.reddit.com/r/krita/comments/a7615o/free_transform_not_working/
* I can't check it, since now Krita doesn't allow me to assign again both tools to ctrl+T because of the conflict. But I know for sure there were two shortcuts like that because I searched for 'ctrl+T' and both of the shortcuts showed up and they were identical. Also the fix described in the reddit link above worked for both the poster and for me. The shortcut before the fix didn't work, as described above, and after the fix started to work. (The fix mentioned: just assign SVG Text Tool to None).


SOFTWARE/OS VERSIONS
Windows: 10
Comment 1 Halla Rempt 2018-12-18 07:42:49 UTC
Git commit 226a2660244967ecb0af45db0d5d4315e35c21f9 by Boudewijn Rempt.
Committed on 18/12/2018 at 07:42.
Pushed by rempt into branch 'krita/4.1'.

Remove default shortcut for the text tool

We just don't have anything free anymore that we could use here.

M  +1    -1    plugins/tools/svgtexttool/SvgTextTool.action

https://commits.kde.org/krita/226a2660244967ecb0af45db0d5d4315e35c21f9
Comment 2 Halla Rempt 2018-12-18 07:51:42 UTC
Git commit 39ae2d34133e97bc7985c0dc9dc17ebb29a4f905 by Boudewijn Rempt.
Committed on 18/12/2018 at 07:41.
Pushed by rempt into branch 'master'.

Remove default shortcut for the text tool

We just don't have anything free anymore that we could use here.

M  +3    -3    libs/widgetutils/xmlgui/kactionconflictdetector.cpp
M  +1    -1    plugins/tools/svgtexttool/SvgTextTool.action

https://commits.kde.org/krita/39ae2d34133e97bc7985c0dc9dc17ebb29a4f905