Remove default shortcut for the text tool

We just don't have anything free anymore that we could use here.

BUG:402270